--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 body {
     line-height: 1.7;
@@ -86,6 +87,7 @@ nav ul li a::after {
 
 nav ul li a:hover::after {
   width: 100%; /* expands underline */
+  transition: width 0.3s ease;
 }
 
 .button-auto {
@@ -219,4 +221,95 @@ nav ul li a:hover::after {
     font-size: 1.2rem;
     margin: 0 auto;
     max-width: 400px;
+}
+/* FIRST SECTION */
+.first-section {
+    padding: 5em 8em;
+}
+.stats-container {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.stat-box {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.stat-box i {
+  font-size: 3rem;
+  color: #00ff88;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.stat-box h2 {
+  line-height: .5;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin: 5px 0;
+  color: #fff;
+}
+
+.stat-box p {
+  font-size: 1em;
+  color: #aaa;
+  margin: 0;
+}
+.odometer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5rem;
+}
+/* GRID SECTION FOR FIRST SECTION */
+.grid-text-card {
+  margin-top: 5rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* 2 equal columns */
+  gap: 10em;
+  align-items: center;
+} 
+.caption-text {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    text-align: start;
+}
+.caption-text h2 {
+    font-size: 3rem;
+    color: #48d494;
+    margin-bottom: 1.8rem 28.8px;
+    font-weight: 900;
+    max-width: 450px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.caption-text p {
+    font-family: "lora", sans-serif;
+    color: #aaa;
+}
+.img-box {
+    position: relative;
+    display: inline-block;
+}
+.img-box img {
+    width: 100%;
+    height: auto;
+}
+.img-box::after {
+  content: "";
+  position: absolute;
+  top: 18px;   /* move it down */
+  left: 18px;  /* move it right */
+  width: 100%;
+  height: 100%;
+  background: #20e37b;
+  z-index: -2;
 }
