--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,10 @@ body {
     z-index: 100;
     width: 100%;
 }
+.hamburger, .close-btn {
+  display: none;
+}
+
 .site-navbar {
     display: flex;
     flex-direction: row;
@@ -196,7 +200,7 @@ nav ul li a:hover::after {
   top: o;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 110%;
 }
 .content {
   position: relative;
@@ -312,4 +316,167 @@ nav ul li a:hover::after {
   height: 100%;
   background: #20e37b;
   z-index: -2;
+}
+.section-section {
+    padding: 5em 8em;
+}
+.section-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
+}
+.grid-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10em;
+    align-items: center;
+}
+.tx-box {
+  display: flex;
+  align-items: flex-start;
+  text-align: start;
+  flex-direction: column;
+}
+.tx-box h2 {
+    font-size: 3rem;
+    color: #48d494;
+    margin-bottom: 1.8rem 28.8px;
+    font-weight: 900;
+    max-width: 450px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.tx-box p {
+    font-family: "lora", sans-serif;
+    color: #aaa;
+}
+.sec-img {
+  position: relative;
+  display: inline-block;
+}
+.sec-img img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+.sec-img::after {
+  content: "";
+  position: absolute;
+  top: 18px;   /* move it down */
+  left: 18px;  /* move it right */
+  width: 100%;
+  height: 100%;
+  background: #20e37b;
+  z-index: -2;
+}
+ .tools-container { 
+    margin-top: 5rem;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    margin-bottom: 4rem;
+} 
+
+    .splide__slide {
+      text-align: center;
+    }
+
+.tool-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.tool-card img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 12px;
+  transition: transform 0.3s ease;
+}
+
+.tool-card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #70e7af9f; /* Green overlay */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 1;
+  pointer-events: none;
+  border-radius: 12px;
+}
+
+.tool-card:hover::before {
+  opacity: 1;
+  z-index: 1;
+}
+
+.tool-card:hover img {
+  transform: scale(1.3); /* Zoom in */
+}
+
+.tx-content {
+  position: absolute;
+  bottom: 0;
+  background: #000c;
+  width: 100%;
+  height: 100%;
+  transform: translateY(50%,);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  transition: opacity 0.3s ease-in-out;
+  opacity: 0;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  padding: 12px;
+  color: #fff;
+  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,.7) 100%);
+}
+.tx-content h3 {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+} 
+.tx-content span {
+  font-size: 0.9rem;
+  font-weight: 500;
+  font-family: 'lora', serif;
+  color: #f7f4f4;
+}
+.tool-card:hover .tx-content {
+  opacity: 1;
+  z-index: 2;
+}
+.splide__pagination {
+  text-align: center;
+  bottom: -5em !important;
+  color: white !important;
+}
+.splide__pagination__page {
+  background: #fff !important;
+  border: 0;
+  border-radius: 5px !important;
+  display: inline-block;
+  height: 4px !important;
+  margin: 3px 5px !important;
+  opacity: .7;
+  padding: 0;
+  position: relative;
+  transition: transform .2s linear;
+  width: 20px !important;
+}
+.splide__pagination__page.is-active {
+  background: #20e32a !important;
+  height: 4px !important;
+  transform: scale(1.3);
 }
