--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,5 +1,5 @@
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
   .hamburger {
     display: block;
     font-size: 1.8rem;
@@ -21,7 +21,10 @@
     z-index: 1100;
     display: block;
 }
-
+ .hero-section::before {
+    height: 100vh; /* or auto, or a value that fits your content */
+    min-height: 350px;
+ }
   /* Hide nav by default */
   .mobile-nav, .button-auto {
     position: fixed;
@@ -58,26 +61,93 @@
   .mobile-nav.active {
     right: 0;
   }
+.first-section {
+  padding: 0;
+}
   .stats-container {
     flex-direction: column;
+    padding: 10px;
   }
   .stat-box {
-    flex-direction: column;
+    flex-direction: row;
   }
   .odometer {
     flex-direction: column;
+    align-items: flex-start;
+    margin-top: 3rem;
+    
   }
   .grid-text-card {
     grid-template-columns: 1fr;
+    gap: 5em;
+    padding: 10px;
   }
   .caption-text {
-    text-align: center; 
+    text-align: flex; 
+    align-items: flex-start;
+
+  }
+  .section-section {
+    padding: 0;
   }
   .caption-text h2 {
-    width: 100%;
-    max-width: 100%;
     padding: 0.1rem;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+    align-items: center;
+  }
+  .Schedule-section {
+    padding: 0;
+  }
+  .text-container {
+    padding: 1rem;
+  }
+  .grid-content {
+    grid-template-columns: 1fr;
+    padding: 10px;
+    margin-top: 5rem;
+    gap: 5rem;
+  }
+    .week-days {
+    gap: 0.6rem;
+  }
+
+  .week-days button {
+    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
+  }
+  .Schedule-section {
+    padding: 0;
+  }
+  .train-section {
+    padding: 0;
+  }
+.train-container {
+  padding: 10px;
+}
+
+  .grid-container {
+    grid-template-columns: 1fr;
+    padding: 10px;
+  }
+  .services-section {
+    padding: 0;
+    margin-bottom: 3rem;
+  }
+  .service-content {
+    padding: 1rem;
+  }
+  .footer-section, .footer-container  {
+    padding: 0;
+    margin: 0;
+  }
+  .content-ftr {
+    flex-direction: column;
+  }
+  .last-txt {
+    padding: 10px;
+  }
+  * {
+    outline: 1px solid red;
   }
 }
